@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-85
+2016-07-21 Mikhail S. Dubrovin
+- CalibFileFinder.py - add methods deploy_calib_file(...), deploy_calib_array(...) and self-tests PSAS-148
+	
 Tag: V00-02-84
 2016-07-20 Mikhail S. Dubrovin
 - fix problem with propagation of the default pix_scale_size
